syntax = "proto3";
package directmq.v1;
option go_package = "./protocol";

enum DeliveryStrategy {
    DELIVERY_STRATEGY_AT_LEAST_ONCE_UNSPECIFIED = 0;
    DELIVERY_STRATEGY_AT_MOST_ONCE = 1;
}

message Publish {
    string topic = 1;
    DeliveryStrategy delivery_strategy = 2;
    int64 size = 3;
    bytes payload = 4;
}
